force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanConcern__c/HealthCloudGA__EhrCarePlanConcern__c.object-meta.xml
<CustomObject>
    <label>EHR Care Plan Concern</label>
    <nameField>
        <displayFormat>Cond-{0}</displayFormat>
        <label>EHR Care Plan Concern ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Care Plan Concerns</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>