force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanConcern__c/fields/HealthCloudGA__CarePlan__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CarePlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Plan</label>
    <referenceTo>HealthCloudGA__EhrCarePlan__c</referenceTo>
    <relationshipLabel>EHR Care Plan Concerns</relationshipLabel>
    <relationshipName>CarePlanConditions</relationshipName>
    <type>Lookup</type>
</CustomField>